tests/base/invalid/SetDefine_CompileFail_1.whiley


define intlist as {int}

void ::main(System.Console sys):    
     il = {1,2,3}
     sys.out.println(|il|)
     sys.out.println(il[0])
